feat: site name endpoint + frontend
